...
        self == .enabled || self == .requiresApproval
    }

    var title: String {
        switch self {
        case .notRegistered:
            "Off"
        case .enabled:
            "On"
        case .requiresApproval:
            "Approval Required"
        case .unavailable:
            "Unavailable"
        }
    }
...
